	Fixed bug where Safari would crash if you was hiding the editor before serializing the contents.
	Fixed bug where the editor wasn't scaled propertly in fullscreen mode using the old fullscreen_new_window option.
	Fixed bug where render method didn't load language packs in IE and Opera if you rendered an editor during page load.
	Fixed so the dialog language packs only gets loaded the first time you open a dialog.
	Fixed so all classes in the whole UI is prefixed with "mce" to avoid collisions, use the skin converter to update your existing skins.
	Fixed so all classes in the inlinepopups logic is prefixed with "mce" to avoid collisions, use the skin converter to update your existing skins.
	Fixed so that the window in fullscreen mode can be resized when fullscreen_new_window option is enabled.
Version 3.0.1 (2008-02-21)
	Added spellchecker plugin into the main package, but without any backend can be specified with the spellchecker_rpc_url option.
	Added src attribute for script elements to the default valid_elements option value.
	Added extra parameter to the class_filter callback it can now also filter out classes based on the whole CSS rule.
	Added support for domain relaxing, TinyMCE can now be loaded from an remote domain as long as they are on the same root domain.
	Added support for custom elements the new custom_elements option enables you to add non HTML elements to the editor.
	Added support for the W3C Selectors API that was added to latest nightly build of WebKit.
	Fixed bug where some object param element wasn't stored correctly using the media plugin.
	Fixed bug where Opera was scrolling to top of page is drop menus on list boxes where displayed.
	Fixed bug where IE6 was crashing if a format block was used on a container with anchor elements.
	Fixed bug where spans with font sizes wasn't handled correctly when editor was loading contents.
	Fixed bug where mode exact couldn't convert editors with name only. Id is no longer required but recommended.