@@ -17,6 +17,7 @@ Version 3.0.2 (2008-xx-xx)
 	Fixed bug where Safari would crash if you was hiding the editor before serializing the contents.
 	Fixed bug where the editor wasn't scaled propertly in fullscreen mode using the old fullscreen_new_window option.
 	Fixed bug where render method didn't load language packs in IE and Opera if you rendered an editor during page load.
+	Fixed bug where resizing the browser window in fullscreen didn't resize the editor.
 	Fixed so the dialog language packs only gets loaded the first time you open a dialog.
 	Fixed so all classes in the whole UI is prefixed with "mce" to avoid collisions, use the skin converter to update your existing skins.
 	Fixed so all classes in the inlinepopups logic is prefixed with "mce" to avoid collisions, use the skin converter to update your existing skins.
